fix: :bug: correccion find all taxpayer