@@ -3,7 +3,8 @@ package com.alness.health.taxpayer.service.impl;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import javax.crypto.SecretKey;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.domain.Specification;
@@ -12,11 +13,13 @@ import org.springframework.stereotype.Service;
 
 import com.alness.health.address.dto.response.AddressResponse;
 import com.alness.health.address.entity.AddressEntity;
+import com.alness.health.address.repository.AddressRepository;
 import com.alness.health.address.service.AddressService;
 import com.alness.health.common.ApiCodes;
 import com.alness.health.common.dto.ResponseDto;
 import com.alness.health.company.dto.response.CompanyResponse;
 import com.alness.health.company.entity.CompanyEntity;
+import com.alness.health.company.repository.CompanyRepository;
 import com.alness.health.company.service.CompanyService;
 import com.alness.health.config.GenericMapper;
 import com.alness.health.exceptions.RestExceptionHandler;
@@ -24,10 +27,11 @@ import com.alness.health.taxpayer.dto.request.TaxpayerRequest;
 import com.alness.health.taxpayer.dto.response.TaxpayerResponse;
 import com.alness.health.taxpayer.entity.LegalRepresentativeEntity;
 import com.alness.health.taxpayer.entity.TaxpayerEntity;
-import com.alness.health.taxpayer.repository.LegalRepresentativeRepository;
 import com.alness.health.taxpayer.repository.TaxpayerRepository;
 import com.alness.health.taxpayer.service.TaxpayerService;
 import com.alness.health.taxpayer.specification.TaxpayerSpecification;
+import com.alness.health.utils.DecryptUtil;
+import com.alness.health.utils.TextEncrypterUtil;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -38,13 +42,16 @@ public class TaxpayerServiceImpl implements TaxpayerService {
     private AddressService addressService;
 
     @Autowired
+    private AddressRepository addressRepository;
+
+    @Autowired
     private CompanyService companyService;
 
     @Autowired
-    private TaxpayerRepository taxpayerRepository;
+    private CompanyRepository companyRepository;
 
     @Autowired
-    private LegalRepresentativeRepository legalRepresentativeRepository;
+    private TaxpayerRepository taxpayerRepository;
 
     @Autowired
     private GenericMapper mapper;
@@ -54,7 +61,7 @@ public class TaxpayerServiceImpl implements TaxpayerService {
         return taxpayerRepository.findAll(filterWithParameters(parameters))
                 .stream()
                 .map(this::mapperDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -68,34 +75,57 @@ public class TaxpayerServiceImpl implements TaxpayerService {
     @Override
     public TaxpayerResponse save(TaxpayerRequest request) {
         TaxpayerEntity taxpayer = mapper.map(request, TaxpayerEntity.class);
+
         try {
-            if (request.getLegalRepresentative() != null) {
-                LegalRepresentativeEntity legaRep = mapper.map(request.getLegalRepresentative(),
+            // Guardar dirección del contribuyente primero
+            AddressResponse addressResponse = addressService.save(request.getAddress());
+            AddressEntity addressEntity = addressRepository.findById(addressResponse.getId())
+                    .orElseThrow(() -> new RuntimeException("Address not found after save"));
+            taxpayer.setAddress(addressEntity);
+
+            // Guardar Legal Representative si aplica
+            if (request.getTypePerson().equalsIgnoreCase("Moral") && request.getLegalRepresentative() != null) {
+                LegalRepresentativeEntity legalRep = mapper.map(request.getLegalRepresentative(),
                         LegalRepresentativeEntity.class);
+
                 AddressResponse legalRepAddress = addressService.save(request.getLegalRepresentative().getAddress());
-                legaRep.setAddress(mapper.map(legalRepAddress, AddressEntity.class));
-                legaRep = legalRepresentativeRepository.save(legaRep);
-                taxpayer.setLegalRepresentative(legaRep);
+                AddressEntity legalRepAddressEntity = addressRepository.findById(legalRepAddress.getId())
+                        .orElseThrow(() -> new RuntimeException("Legal Representative Address not found after save"));
+
+                SecretKey key = TextEncrypterUtil.generateKey();
+                legalRep.setFullName(TextEncrypterUtil.encrypt(legalRep.getFullName(), key));
+                legalRep.setRfc(TextEncrypterUtil.encrypt(legalRep.getRfc(), key));
+                legalRep.setDataKey(TextEncrypterUtil.keyToString(key));
+
+                legalRep.setTaxpayer(taxpayer);
+                legalRep.setAddress(legalRepAddressEntity);
+                taxpayer.setLegalRepresentative(legalRep);
+            } else {
+                taxpayer.setLegalRepresentative(null);
             }
 
-        } catch (Exception e) {
-            log.error("Error to save legal representative {}", e.getMessage());
-            throw new RestExceptionHandler(ApiCodes.API_CODE_500, HttpStatus.INTERNAL_SERVER_ERROR,
-                    "Error to save legal representative");
-        }
-        CompanyResponse companyResp = companyService.save(request.getCompanyRequest());
-        CompanyEntity company = mapper.map(companyResp, CompanyEntity.class);
-        taxpayer.setCompany(company);
+            // Guardar la empresa antes de asignarla a taxpayer
+            CompanyResponse companyResp = companyService.save(request.getCompanyRequest());
+            CompanyEntity company = companyRepository.findById(companyResp.getId())
+                    .orElseThrow(() -> new RuntimeException("Company not found after save"));
+            company.setTaxpayer(taxpayer);
+            taxpayer.setCompany(company);
 
-        try {
-            AddressResponse address = addressService.save(request.getAddress());
-            taxpayer.setAddress(mapper.map(address, AddressEntity.class));
+            // Finalmente, guardar taxpayer
+            SecretKey key = TextEncrypterUtil.generateKey();
+            taxpayer.setCorporateReasonOrNaturalPerson(
+                    TextEncrypterUtil.encrypt(taxpayer.getCorporateReasonOrNaturalPerson(), key));
+            taxpayer.setRfc(TextEncrypterUtil.encrypt(taxpayer.getRfc(), key));
+            taxpayer.setDataKey(TextEncrypterUtil.keyToString(key));
+
             taxpayer = taxpayerRepository.save(taxpayer);
         } catch (Exception e) {
             log.error("Error to save taxpayer {}", e.getMessage());
+            e.printStackTrace();
             throw new RestExceptionHandler(ApiCodes.API_CODE_500, HttpStatus.INTERNAL_SERVER_ERROR,
                     "Error to save taxpayer");
         }
+
         return mapperDto(taxpayer);
     }
 
@@ -110,12 +140,14 @@ public class TaxpayerServiceImpl implements TaxpayerService {
     }
 
     private TaxpayerResponse mapperDto(TaxpayerEntity source) {
-        return mapper.map(source, TaxpayerResponse.class);
+        TaxpayerResponse response = mapper.map(source, TaxpayerResponse.class);
+        DecryptUtil.decryptLegalRep(response.getLegalRepresentative(), source.getLegalRepresentative().getDataKey());
+        DecryptUtil.decryptTaxpayer(response, source.getDataKey());
+        return response;
     }
 
     private Specification<TaxpayerEntity> filterWithParameters(Map<String, String> parameters) {
         return new TaxpayerSpecification().getSpecificationByFilters(parameters);
     }
 
-    
 }
